Fix extra margin in popovers

--- a/web-components/src/components/taskitem/scss/task-item.scss
+++ b/web-components/src/components/taskitem/scss/task-item.scss
@@ -131,6 +131,11 @@
     line-height: $taskitem-popover-title-height;
     margin-bottom: $taskitem-main-margin;
     width: calc(100%);
+
+    &.popover-item-title {
+      margin-bottom: 0;
+    }
+
   }
 
   &_title {
